# deco-cli

./: .gitignore  README.md  deco_cli.py  deco_test.py  pyproject.toml
deploy/: com.deco.collect.plist  deco-collect.service  deco-collect.timer
